[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/elements/BasicElement.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
resource_local_to_scene = true
bg_color = Color( 0.796078, 0.65098, 0.968627, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="BasicElement" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1801.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( -158.25, -97.25 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 119.0
margin_bottom = 24.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 119.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="LayoutContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 104.0
margin_bottom = 19.0

[node name="ResizeTween" type="Tween" parent="."]

[node name="ColourTween" type="Tween" parent="."]
